@@ -476,7 +476,7 @@ The db's pool size has returned to the original value.
     ...
     >>> print r.getMessage() # doctest: +ELLIPSIS +NORMALIZE_WHITESPACE
     <zc.async.job.Job (oid ..., db 'unnamed')
-     ``<built-in function mul>(14, None)``> failed in thread ... with result:
+     ``<built-in function mul>(14, None)``> failed in thread ... with traceback:
     *--- Failure #... (pickled) ---
     .../zc/async/job.py:...: _call_with_retry(...)
      [ Locals ]...
